# rag-vectorize-data

./: .gitignore  README.md  data_agent.py  main.py  pyproject.toml
embedders/: __init__.py  bge_embedder.py  embedder_factory.py  openai_embedder.py
parsers/: __init__.py
rag/embedders/: base_embedder.py  bge_embedder.py
rag/parsers/: base_parser.py  excel_parser.py  pdf_parser.py
rag/text_processor/: __init__.py  text_processor.py
rag/vector_stores/: __init__.py  base_vector_store.py  chroma.py
